--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "jest",
     "lint": "eslint src test/specs",
     "lint:fix": "npm run lint -- --fix",
-    "prepublishOnly": "npm run test && build"
+    "prepublishOnly": "npm run build"
   },
   "keywords": [
     "get",
