--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ node_js:
 
 before_script:
   - npm run lint
+  - npm run test
 
-script: npm run test
+script: npm run build
 
 deploy:
   provider: npm
