--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "rollup -c",
     "test": "jest",
     "lint": "eslint src test/specs",
-    "lint:fix": "npm run lint -- --fix"
+    "lint:fix": "npm run lint -- --fix",
+    "release": "standard-version"
   },
   "keywords": [
     "get",
@@ -56,7 +57,8 @@
     "jest": "^22.4.3",
     "regenerator-runtime": "^0.11.1",
     "rollup": "^0.58.1",
-    "rollup-plugin-babel": "^3.0.3"
+    "rollup-plugin-babel": "^3.0.3",
+    "standard-version": "^4.3.0"
   },
   "jest": {
     "verbose": true,
