--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "regenerator-runtime": "^0.11.1",
     "rollup": "^0.58.1",
     "rollup-plugin-babel": "^3.0.3",
+    "rollup-plugin-uglify": "^3.0.0",
     "standard-version": "^4.3.0"
   },
   "jest": {
